# aws-credentials-cli-rs

./: .gitignore  .nvim-dap.lua  .vimspector.json  Cargo.toml  FAQ.md  README.md
.github/workflows/: feature.yml  release.yml
src/: .main.rs.rustfmt  cache.rs  cli.rs  defaults.rs  lib.rs  main.rs  models.rs
src/assume/: aws.rs  azure.rs  mod.rs  models.rs
src/cache/: mod.rs
