[package]
name = "aws-credentials-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-sts = "0.30.0"
aws-types = "0.56.1"
azure_core = "0.14.0"
azure_identity = "0.14.0"
chrono = "0.4.30"
clap = { version = "4.4.1", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.4.1"
derive_builder = "0.12.0"
dirs = "5.0.1"
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
text_io = "0.1.12"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
urlencoding = "2.1.3"
