[package]
name = "aws-credentials-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.0.3"
aws-sdk-sts = "1.4.0"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
aws-types = "1.0.3"
azure_core = "0.14.0"
azure_identity = "0.14.0"
chrono = "0.4.30"
clap = { version = "4.4.1", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.4.1"
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
configparser = { version = "3.0.4", features = ["indexmap"] }
derive_builder = "0.12.0"
dirs = "5.0.1"
env_logger = "0.10.0"
expanduser = "1.2.2"
inquire = "0.6.2"
log = { version = "0.4.20", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
text_io = "0.1.12"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
urlencoding = "2.1.3"
